--- a/About.html
+++ b/About.html
@@ -60,7 +60,7 @@ IT`S ABOUT LEARNING 2 DANCE IN THE RAIN "</span> <span class="writer">vivian gre
 </div>
 <br>
 <div class="Contact-Me">
-        <a class="btn" href="https://www.facebook.com/cr.meezo" target="blank">
+        <a class="btn" href="https://www.facebook.com/meezo.taher" target="blank">
         <i class="fab fa-facebook-f"></i>
         </a>
         <a class="btn" href="https://github.com/meezo-taher" target="blank">
