--- a/Slider.html
+++ b/Slider.html
@@ -68,7 +68,7 @@
     </div>
     <br><br><br>
     <div class="Contact-Me">
-        <a class="btn" href="https://www.facebook.com/cr.meezo" target="blank">
+        <a class="btn" href="https://www.facebook.com/meezo.taher" target="blank">
         <i class="fab fa-facebook-f"></i>
         </a>
         <a class="btn" href="https://github.com/meezo-taher" target="blank">
